--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -41,3 +41,52 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-image: url('\TeaHeritage\img')
+}
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    padding: 15px;
+}
+
+.navbar-brand {
+    float: left;
+    font-size: 24px;
+    color: white;
+}
+
+.navbar-nav {
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-item {
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.nav-item a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+#loginBtn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
