--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -6,70 +6,77 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<!--        <link rel="stylesheet" href="{% static 'css/style.css' %}">-->
         <title>My Django Project</title>
     </head>
     <body>
-    <h1></h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">ЧайнаСпадщина.ua</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Асортимент
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Чай</a>
-              <a class="dropdown-item" href="#">Кава</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Десерти</a>
+    <header>
+        <div class="header_in">
+            <div class="header_main">
+                <img src="img/logo.png" alt="Логотип">
             </div>
-          </li>
+            <div class="b--header__nav-_placeholder">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">ЧайнаСпадщина.ua</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-          <li class="nav-item">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Вхід/Регестрація</button>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Пошук" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Знайти</button>
-        </form>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Асортимент
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Чай</a>
+                  <a class="dropdown-item" href="#">Кава</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Десерти</a>
+                </div>
+              </li>
 
-      </div>
-    </nav>
+              <li class="nav-item">
+                  <a class="nav-link" href="/login">Вхід/Регестрація</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Пошук" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Знайти</button>
+            </form>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://old-ambar.ru/upload/shop_5/3/1/5/item_315/shop_items_catalog_image315.jpg" alt="First slide" width="300" height="500">
+          </div>
+        </nav>
+            </div>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://img.freepik.com/free-photo/cup-of-tea-on-a-tea-herbs-background-top-view_176474-5152.jpg?size=626&ext=jpg&ga=GA1.1.1887694819.1701717694&semt=ais" alt="Second slide" width="300" height="500">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://kartinki.pics/uploads/posts/2022-03/thumbs/1647484764_2-kartinkin-net-p-kruzhka-chaya-kartinki-2.jpg" alt="Third slide" width="300" height="500">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+    </header>
+<!--    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">-->
+<!--      <div class="carousel-inner">-->
+<!--        <div class="carousel-item active">-->
+<!--          <img class="d-block w-100" src="https://old-ambar.ru/upload/shop_5/3/1/5/item_315/shop_items_catalog_image315.jpg" alt="First slide" width="360" height="640">-->
+<!--        </div>-->
+<!--        <div class="carousel-item">-->
+<!--          <img class="d-block w-100" src="https://img.freepik.com/free-photo/cup-of-tea-on-a-tea-herbs-background-top-view_176474-5152.jpg?size=626&ext=jpg&ga=GA1.1.1887694819.1701717694&semt=ais" alt="Second slide" width="300" height="500">-->
+<!--        </div>-->
+<!--        <div class="carousel-item">-->
+<!--          <img class="d-block w-100" src="https://kartinki.pics/uploads/posts/2022-03/thumbs/1647484764_2-kartinkin-net-p-kruzhka-chaya-kartinki-2.jpg" alt="Third slide" width="300" height="500">-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">-->
+<!--        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--        <span class="sr-only">Previous</span>-->
+<!--      </a>-->
+<!--      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">-->
+<!--        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--        <span class="sr-only">Next</span>-->
+<!--      </a>-->
+<!--    </div>-->
 <!--        <h1>Welcome to ЧайнаСпадщина.ua</h1>-->
 
 <!--        <h1>ЧайнаСпадщина.ua - це український інтернет-магазин, присвячений чаю та його багатогранній спадщині. Ми віримо в те, що чай — це не просто напій, а справжня культурна скарбниця, яка об'єднує традиції та смакові вподобання. Наш асортимент включає в себе різноманітні сорти чаю з усього світу, але особливу увагу ми приділяємо українським чайним традиціям та унікальним смакам.-->
@@ -78,47 +85,47 @@
 
 <!--        ЧайнаСпадщина.ua — це не просто магазин, а місце, де ви можете відчути атмосферу та смак минулих та сучасних чайних традицій. Поглибіться в світ ароматного задоволення з ЧайнаСпадщина.ua, де кожен чайний листок — це шматочок спадщини, який ми із задоволенням ділимо з вами.</h1>-->
 
-    <ul>
-        <div class="card-deck">
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Чайна карта</h5>
-                <p class="card-text">Путівник у світі чаю.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Як правильно заварювати чай</h5>
-                <p class="card-text">Культура чаювання в Україні і Китаї.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Як вибирати китайський чай</h5>
-                <p class="card-text">7 критеріїв якості.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-<!--              <img class="card-img-top" src="index\img\1.jpg" alt="Card image cap">-->
-              <div class="card-body">
-                <h5 class="card-title">Правильний посуд для чаювання</h5>
-                <p class="card-text">Гід по чайному посуду: необхідний мінімум.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
-    </ul>
+<!--    <ul>-->
+<!--        <div class="card-deck">-->
+<!--          <div class="col-sm-6">-->
+<!--            <div class="card text-center ext-white bg-success mb-3 ">-->
+<!--              <div class="card-body">-->
+<!--                <h5 class="card-title">Чайна карта</h5>-->
+<!--                <p class="card-text">Путівник у світі чаю.</p>-->
+<!--                <a href="#" class="btn btn-primary">Go somewhere</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-sm-6">-->
+<!--            <div class="card text-center ext-white bg-success mb-3">-->
+<!--              <div class="card-body">-->
+<!--                <h5 class="card-title">Як правильно заварювати чай</h5>-->
+<!--                <p class="card-text">Культура чаювання в Україні і Китаї.</p>-->
+<!--                <a href="#" class="btn btn-primary">Go somewhere</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-sm-6">-->
+<!--            <div class="card text-center ext-white bg-success mb-3">-->
+<!--              <div class="card-body">-->
+<!--                <h5 class="card-title">Як вибирати китайський чай</h5>-->
+<!--                <p class="card-text">7 критеріїв якості.</p>-->
+<!--                <a href="#" class="btn btn-primary">Go somewhere</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-sm-6">-->
+<!--            <div class="card text-center ext-white bg-success mb-3">-->
+<!--&lt;!&ndash;              <img class="card-img-top" src="index\img\1.jpg" alt="Card image cap">&ndash;&gt;-->
+<!--              <div class="card-body">-->
+<!--                <h5 class="card-title">Правильний посуд для чаювання</h5>-->
+<!--                <p class="card-text">Гід по чайному посуду: необхідний мінімум.</p>-->
+<!--                <a href="#" class="btn btn-primary">Go somewhere</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--    </ul>-->
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
