--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -10,131 +10,202 @@
         <title>Tea Heritage</title>
     </head>
     <body>
-    <header>
-        <div class="header_in">
-            <div class="header_middle">
-                <img src="{% static 'img/logo.jpg' %}" alt="logo" width="640" height="360">
-            </div>
-            <div class="header_nav">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">ЧайнаСпадщина.ua</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+		<div class="header">
+			<div class="header_in">
+				<div class="header_middle">
+					<ul class="navbar-nav mr-auto">
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Асортимент
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Чай</a>
-                  <a class="dropdown-item" href="#">Кава</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Десерти</a>
-                </div>
-              </li>
+					<a class="navbar-brand" href="/heritage">Чайна Спадщина.ua</a>
+					<a class="nav-link" href="/login">Вхід/Регестрація</a>
+					</ul>
+				</div>
+				<div class="header_nav">
+					<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					  </button>
+					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+						  <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  Чай
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							  <a class="dropdown-item" href="#">Чай</a>
+							  <a class="dropdown-item" href="#">Кава</a>
+							  <div class="dropdown-divider"></div>
+							  <a class="dropdown-item" href="#">Десерти</a>
+							</div>
+						  </li>
+						  <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  Кава
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							  <a class="dropdown-item" href="#">Чай</a>
+							  <a class="dropdown-item" href="#">Кава</a>
+							  <div class="dropdown-divider"></div>
+							  <a class="dropdown-item" href="#">Десерти</a>
+							</div>
+						  </li>
+						  <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  Какао
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							  <a class="dropdown-item" href="#">Чай</a>
+							  <a class="dropdown-item" href="#">Кава</a>
+							  <div class="dropdown-divider"></div>
+							  <a class="dropdown-item" href="#">Десерти</a>
+							</div>
+						  </li>
+						  <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  Посуд
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							  <a class="dropdown-item" href="#">Чай</a>
+							  <a class="dropdown-item" href="#">Кава</a>
+							  <div class="dropdown-divider"></div>
+							  <a class="dropdown-item" href="#">Десерти</a>
+							</div>
+						  </li>
+						  <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  Десерти
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							  <a class="dropdown-item" href="#">Чай</a>
+							  <a class="dropdown-item" href="#">Кава</a>
+							  <div class="dropdown-divider"></div>
+							  <a class="dropdown-item" href="#">Десерти</a>
+							</div>
+						  </li>
 
-              <li class="nav-item">
-                  <a class="nav-link" href="/login">Вхід/Регестрація</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Пошук" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Знайти</button>
-            </form>
+						</ul>
+						<form class="form-inline my-2 my-lg-0">
+							<input class="form-control mr-sm-2" type="search" placeholder="Пошук" aria-label="Search">
+							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Знайти</button>
+						</form>
 
-          </div>
-        </nav>
-            </div>
-        </div>
-    </header>
-    <footer>
-        <div class="banner">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="{% static 'img/asia1.jpg' %}" alt="First slide"  height="auto">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="{% static 'img/asia2.jpg' %}" alt="Second slide" height="auto">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="{% static 'img/European1.jpg' %}" alt="Third slide" height="auto">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="{% static 'img/European2.jpg' %}" alt="Аourth slide" height="auto">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-        </div>
-<!--        <h1>Welcome to ЧайнаСпадщина.ua</h1>-->
+					  </div>
+					</nav>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div class="banner">
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-inner">
+					<div class="carousel-item active">
+					  <img class="d-block w-100" src="{% static 'img/asia1.jpg' %}" alt="First slide"  height="auto">
+					</div>
+					<div class="carousel-item">
+					  <img class="d-block w-100" src="{% static 'img/asia2.jpg' %}" alt="Second slide" height="auto">
+					</div>
+					<div class="carousel-item">
+					  <img class="d-block w-100" src="{% static 'img/European1.jpg' %}" alt="Third slide" height="auto">
+					</div>
+					<div class="carousel-item">
+					  <img class="d-block w-100" src="{% static 'img/European2.jpg' %}" alt="Аourth slide" height="auto">
+					</div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				  </a>
+				</div>
+			</div>
+			<div>
+				<section id="highlights" class="wrapper style3">
+					<div class="title">The Endorsements</div>
+					<div class="container">
+						<div class="row aln-center">
+							<div class="col-4 col-12-medium">
+								<section class="highlight">
+									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<h3><a href="#">Aliquam diam consequat</a></h3>
+									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<ul class="actions">
+										<li><a href="#" class="button style1">Learn More</a></li>
+									</ul>
+								</section>
+							</div>
+							<div class="col-4 col-12-medium">
+								<section class="highlight">
+									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<h3><a href="#">Nisl adipiscing sed lorem</a></h3>
+									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<ul class="actions">
+										<li><a href="#" class="button style1">Learn More</a></li>
+									</ul>
+								</section>
+							</div>
+							<div class="col-4 col-12-medium">
+								<section class="highlight">
+									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<h3><a href="#">Mattis tempus lorem</a></h3>
+									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<ul class="actions">
+										<li><a href="#" class="button style1">Learn More</a></li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+			<ul>
+				<div class="card-deck">
+				  <div class="col-sm-6">
+					<div class="card text-center" style="width: 18rem;">
+					  <img class="card-img-top" src="{% static 'img/European2.jpg' %}" alt="Card image cap">
+					  <div class="card-body">
+						<h5 class="card-title">Чайна карта</h5>
+						<p class="card-text">Путівник у світі чаю.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-sm-6">
+					<div class="card text-center" style="width: 18rem;">
+					  <div class="card-body">
+						<h5 class="card-title">Як правильно заварювати чай</h5>
+						<p class="card-text">Культура чаювання в Україні і Китаї.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-sm-6">
+					<div class="card text-center" style="width: 18rem;">
+					  <div class="card-body">
+						<h5 class="card-title">Як вибирати китайський чай</h5>
+						<p class="card-text">7 критеріїв якості.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-sm-6">
+					<div class="card text-center" style="width: 18rem;">
+		<!--              <img class="card-img-top" src="index\img\1.jpg" alt="Card image cap">-->
+					  <div class="card-body">
+						<h5 class="card-title">Правильний посуд для чаювання</h5>
+						<p class="card-text">Гід по чайному посуду: необхідний мінімум.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			</ul>
+    	</footer>
 
-<!--        <h1>ЧайнаСпадщина.ua - це український інтернет-магазин, присвячений чаю та його багатогранній спадщині. Ми віримо в те, що чай — це не просто напій, а справжня культурна скарбниця, яка об'єднує традиції та смакові вподобання. Наш асортимент включає в себе різноманітні сорти чаю з усього світу, але особливу увагу ми приділяємо українським чайним традиціям та унікальним смакам.-->
-
-<!--        На ЧайнаСпадщина.ua ви знайдете вишукані сорти чаю, які підкреслять ваш особистий смак та принесуть вам насолоду кожного ковзання. Ми дбаємо про якість наших продуктів та пропонуємо широкий вибір чайних аксесуарів для того, щоб ваш чайний час став ще більш приємним та комфортним.-->
-
-<!--        ЧайнаСпадщина.ua — це не просто магазин, а місце, де ви можете відчути атмосферу та смак минулих та сучасних чайних традицій. Поглибіться в світ ароматного задоволення з ЧайнаСпадщина.ua, де кожен чайний листок — це шматочок спадщини, який ми із задоволенням ділимо з вами.</h1>-->
-
-    <ul>
-        <div class="card-deck">
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3 ">
-              <div class="card-body">
-                <h5 class="card-title">Чайна карта</h5>
-                <p class="card-text">Путівник у світі чаю.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Як правильно заварювати чай</h5>
-                <p class="card-text">Культура чаювання в Україні і Китаї.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-              <div class="card-body">
-                <h5 class="card-title">Як вибирати китайський чай</h5>
-                <p class="card-text">7 критеріїв якості.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-center ext-white bg-success mb-3">
-<!--              <img class="card-img-top" src="index\img\1.jpg" alt="Card image cap">-->
-              <div class="card-body">
-                <h5 class="card-title">Правильний посуд для чаювання</h5>
-                <p class="card-text">Гід по чайному посуду: необхідний мінімум.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
-    </ul>
-    </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
+
